@@ -1,13 +1,17 @@
 package uk.gov.hmcts.reform.sscs.functional.tyanotifications.sya.notifications;
 
+import static java.time.Duration.ofSeconds;
+import static org.awaitility.Awaitility.await;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.Assert.*;
 import static uk.gov.hmcts.reform.sscs.model.AppConstants.FUNCTIONAL_RETRY_LIMIT;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.*;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 import junitparams.Parameters;
+import org.jetbrains.annotations.Nullable;
 import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
@@ -26,11 +30,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
     private static final String AS_APPOINTEE_FOR = "You are receiving this update as the appointee for";
     private static final String RESPONSE_RECEIVED_PAPER_PATH = "paper/responseReceived/";
     private static final String DEAR_APPOINTEE_USER = "Dear Appointee User";
-    private static final String APPEAL_ID = "appeal_id";
     private static final String TYA = "v8eg15XeZk";
-
-    @Value("${track.appeal.link}")
-    private String tyaLink;
 
     @Value("${notification.english.oral.evidenceReceived.appellant.emailId}")
     private String evidenceReceivedEmailTemplateId;
@@ -141,22 +141,8 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
     @Value("${notification.english.listAssist.oral.hearingPostponed.appointee.emailId}")
     private String appointeeHearingPostponedEmailId;
 
-    @Value("${notification.english.oral.dwpUploadResponse.appellant.emailId}")
-    private String oralDwpUploadResponseEmailId;
-
-    @Value("${notification.english.oral.dwpUploadResponse.appellant.smsId}")
-    private String oralDwpUploadResponseSmsId;
-
-    @Value("${notification.english.paper.dwpUploadResponse.appellant.emailId}")
-    private String paperDwpUploadResponseEmailId;
-
-    @Value("${notification.english.paper.dwpUploadResponse.appellant.smsId}")
-    private String paperDwpUploadResponseSmsId;
-
     @Value("${notification.english.appealReceived.appellant.emailId}")
     private String appealReceivedAppellantEmailId;
-    @Value("${notification.english.appealCreated.appellant.smsId}")
-    private String appealReceivedRepresentativeEmailId;
 
     public NotificationsFunctionalTest() {
         super(30);
@@ -321,7 +307,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 subscriptionUpdateOldSmsId
         );
 
-        Notification updateEmailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(subscriptionUpdatedEmailTemplateId)).collect(Collectors.toList()).get(0);
+        Notification updateEmailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(subscriptionUpdatedEmailTemplateId)).toList().getFirst();
         assertTrue(updateEmailNotification.getBody().contains("Dear Appellant User\r\n\r\nEmails about your ESA"));
         assertFalse(updateEmailNotification.getBody().contains("You are receiving this update as the appointee for"));
     }
@@ -337,7 +323,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 subscriptionUpdateOldEmailId,
                 subscriptionUpdateOldSmsId
         );
-        Notification updateEmailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(subscriptionUpdatedEmailTemplateId)).collect(Collectors.toList()).get(0);
+        Notification updateEmailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(subscriptionUpdatedEmailTemplateId)).toList().getFirst();
         assertTrue(updateEmailNotification.getBody().contains("Dear Appointee User\r\n\r\nYou are receiving this update as the appointee for Appellant User.\r\n\r\nEmails about your ESA"));
     }
 
@@ -350,7 +336,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 paperAppointeeEvidenceReceivedEmailId,
                 paperAppointeeEvidenceReceivedSmsId
         );
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(paperAppointeeEvidenceReceivedEmailId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(paperAppointeeEvidenceReceivedEmailId)).toList().getFirst();
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You are receiving this update as the appointee for Appellant User."));
     }
@@ -364,7 +350,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 hearingAdjournedAppointeeEmailId,
                 hearingAdjournedAppointeeSmsId
         );
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(hearingAdjournedAppointeeEmailId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(hearingAdjournedAppointeeEmailId)).toList().getFirst();
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
     }
 
@@ -376,14 +362,14 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 appealLapsedAppointeeEmailTemplateId,
                 appealLapsedAppointeeSmsTemplateId
         );
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appealLapsedAppointeeEmailTemplateId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appealLapsedAppointeeEmailTemplateId)).toList().getFirst();
 
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You are receiving this update as the appointee for"));
 
         List<Notification> notificationLetters = fetchLetters();
         assertEquals(1, notificationLetters.size());
-        assertEquals("Pre-compiled PDF", notificationLetters.get(0).getSubject().orElse("Unknown Subject"));
+        assertEquals("Pre-compiled PDF", notificationLetters.getFirst().getSubject().orElse("Unknown Subject"));
     }
 
     @Test
@@ -394,7 +380,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 appealLapsedAppointeeEmailTemplateId,
                 appealLapsedAppointeeSmsTemplateId
         );
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appealLapsedAppointeeEmailTemplateId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appealLapsedAppointeeEmailTemplateId)).toList().getFirst();
 
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You are receiving this update as the appointee for"));
@@ -409,7 +395,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 paperAppointeeResponseReceivedEmailId,
                 paperAppointeeResponseReceivedSmsId
         );
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(paperAppointeeResponseReceivedEmailId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(paperAppointeeResponseReceivedEmailId)).toList().getFirst();
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("They should have sent you a copy in the post and you should receive this shortly"));
     }
@@ -421,7 +407,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
                 appointeeAppealWithdrawnEmailId, appointeeAppealWithdrawnSmsId);
         Notification emailNotification = notifications.stream()
                 .filter(f -> f.getTemplateId().toString().equals(appointeeAppealWithdrawnEmailId))
-                .collect(Collectors.toList()).get(0);
+                .toList().getFirst();
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You are receiving this update as the appointee for"));
     }
@@ -429,7 +415,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
     @Test
     // Put back when covid19 feature turned off
     @Ignore
-    public void shouldSendAppointeeHearingBookedNotification() throws NotificationClientException, IOException {
+    public void shouldSendAppointeeHearingBookedNotification() throws IOException {
         simulateCcdCallback(HEARING_BOOKED,
             BASE_PATH_TYAN + "appointee/" + HEARING_BOOKED.getId() + "Callback.json");
 
@@ -449,7 +435,7 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
         simulateCcdCallback(EVIDENCE_RECEIVED,
             BASE_PATH_TYAN + "appointee/" + EVIDENCE_RECEIVED.getId() + "Callback.json");
         List<Notification> notifications = tryFetchNotificationsForTestCase(appointeeEvidenceReceivedEmailId, appointeeEvidenceReceivedSmsId);
-        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appointeeEvidenceReceivedEmailId)).collect(Collectors.toList()).get(0);
+        Notification emailNotification = notifications.stream().filter(f -> f.getTemplateId().toString().equals(appointeeEvidenceReceivedEmailId)).toList().getFirst();
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You are receiving this update as the appointee for"));
     }
@@ -459,46 +445,51 @@ public class NotificationsFunctionalTest extends AbstractFunctionalTest {
         simulateCcdCallback(POSTPONEMENT,
             BASE_PATH_TYAN + "appointee/" + POSTPONEMENT.getId() + "Callback.json");
         List<Notification> notifications = tryFetchNotificationsForTestCase(appointeeHearingPostponedEmailId);
-        Notification emailNotification = notifications.get(0);
+        Notification emailNotification = notifications.getFirst();
 
         assertTrue(emailNotification.getBody().contains("Dear Appointee User"));
         assertTrue(emailNotification.getBody().contains("You will receive another email"));
     }
 
     @Test
-    public void shouldSaveReasonableAdjustmentNotificationForAppellant() throws IOException, NotificationClientException {
+    public void shouldSaveReasonableAdjustmentNotificationForAppellant() throws IOException {
         simulateCcdCallback(APPEAL_RECEIVED, BASE_PATH_TYAN + APPEAL_RECEIVED.getId() + "AppellantReasonableAdjustmentCallback.json");
+        await().pollInterval(ofSeconds(2)).atMost(ofSeconds(30)).until(() -> tryFetchNotificationsForTestCaseWithFlag(true, null, appealReceivedAppellantEmailId), hasSize(1));
 
-        delayInSeconds(10);
-        List<Notification> notifications = tryFetchNotificationsForTestCaseWithFlag(true, null, appealReceivedAppellantEmailId);
-        assertEquals(1, notifications.size());
+        SscsCaseData caseData = getSscsCaseDataWithReasonableAdjustmentsOutstanding();
 
-        delayInSeconds(10);
-        SscsCaseDetails caseDetails = findCaseById(caseId);
-        SscsCaseData caseData = caseDetails.getData();
-
-        assertEquals(YesNo.YES, caseData.getReasonableAdjustmentsOutstanding());
+        assertNotNull(caseData);
         assertEquals(1, caseData.getReasonableAdjustmentsLetters().getAppellant().size());
-        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getAppellant().get(0).getValue().getReasonableAdjustmentStatus());
+        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getAppellant().getFirst().getValue().getReasonableAdjustmentStatus());
     }
 
     @Test
-    public void shouldSaveReasonableAdjustmentNotificationForAppellantAndRep() throws IOException, NotificationClientException {
+    public void shouldSaveReasonableAdjustmentNotificationForAppellantAndRep() throws IOException {
         simulateCcdCallback(APPEAL_RECEIVED, BASE_PATH_TYAN + APPEAL_RECEIVED.getId() + "AppellantRepReasonableAdjustmentCallback.json");
+        await().pollInterval(ofSeconds(2)).atMost(ofSeconds(30)).until(() -> tryFetchNotificationsForTestCaseWithFlag(true, null, appealCreatedAppellantEmailId, appealCreatedAppellantSmsId), hasSize(2));
 
-        delayInSeconds(10);
-        List<Notification> notifications = tryFetchNotificationsForTestCaseWithFlag(true, null, appealCreatedAppellantEmailId, appealCreatedAppellantSmsId);
-        assertEquals(2, notifications.size());
+        SscsCaseData caseData = getSscsCaseDataWithReasonableAdjustmentsOutstanding();
 
-        delayInSeconds(10);
-        SscsCaseDetails caseDetails = findCaseById(caseId);
-        SscsCaseData caseData = caseDetails.getData();
-
-        assertEquals(YesNo.YES, caseData.getReasonableAdjustmentsOutstanding());
+        assertNotNull(caseData);
         assertEquals(1, caseData.getReasonableAdjustmentsLetters().getAppellant().size());
         assertEquals(1, caseData.getReasonableAdjustmentsLetters().getRepresentative().size());
-        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getAppellant().get(0).getValue().getReasonableAdjustmentStatus());
-        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getRepresentative().get(0).getValue().getReasonableAdjustmentStatus());
+        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getAppellant().getFirst().getValue().getReasonableAdjustmentStatus());
+        assertEquals(ReasonableAdjustmentStatus.REQUIRED, caseData.getReasonableAdjustmentsLetters().getRepresentative().getFirst().getValue().getReasonableAdjustmentStatus());
+    }
+
+    @Nullable
+    private SscsCaseData getSscsCaseDataWithReasonableAdjustmentsOutstanding() {
+        return await()
+            .pollInterval(ofSeconds(2))
+            .atMost(ofSeconds(30))
+            .until(() -> {
+                SscsCaseDetails caseById = findCaseById(caseId);
+                if (caseById == null || caseById.getData() == null) {
+                    return null;
+                }
+                SscsCaseData data = caseById.getData();
+                return YesNo.YES.equals(data.getReasonableAdjustmentsOutstanding()) ? data : null;
+            }, notNullValue());
     }
 
 }
